--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     }
   </style>
 </head>
+<script src="https://apis.google.com/js/api.js?onload=onGapiLoad" async defer></script>
 <body>
   <div id="sidebar">Google Drive Sidebar Placeholder</div>
   <iframe id="viewer" src=""></iframe>
