--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 </head>
 <script src="https://apis.google.com/js/api.js?onload=onGapiLoad" async defer></script>
 <body>
+    <div id="topbar">
+        <input id="clickMe" type="button" value="clickme" onclick="onGapiLoad();" />
+    </div>
   <div id="sidebar">Google Drive Sidebar Placeholder</div>
   <iframe id="viewer" src=""></iframe>
   <script src="app.js"></script>
