--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
   <!-- Google Identity Services -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 
-  <!-- Google API Client 
+  <!-- Google API Client -->
   <script src="https://apis.google.com/js/api.js" onload="gapiLoaded()" async defer></script>
--->
+
   <!-- Your JS logic 
   <script src="app.js"></script>
 -->
