--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   <!-- Google API Client -->
   <script src="https://apis.google.com/js/api.js" onload="gapiLoaded()" async defer></script>
 
-  <!-- Your JS logic 
+  <!-- Your JS logic -->
   <script src="app.js"></script>
--->
+
 </body>
 </html>
