--- a/index.html
+++ b/index.html
@@ -2,41 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Google Drive Viewer</title>
+  <title>Google Drive App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google Identity Services (GIS) -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  
   <style>
-        body {
+    body {
       margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f7f9fb;
+    }
+    .top-bar {
+      background-color: #1a73e8;
+      color: white;
+      padding: 15px;
+      text-align: center;
+      font-size: 20px;
+      position: sticky;
+      top: 0;
+    }
+    .login-container {
       display: flex;
-      height: 100vh;
-      font-family: sans-serif;
+      justify-content: center;
+      margin-top: 40px;
     }
-    #sidebar {
-      width: 300px;
-      background-color: #f0f0f0;
-      overflow-y: auto;
-      padding: 10px;
-      border-right: 1px solid #ccc;
+    #g_id_signin {
+      display: inline-block;
     }
-    #viewer {
-      flex-grow: 1;
-      border: none;
-    }
-    #loginStatus {
-      font-size: 0.9em;
-      color: gray;
-      padding: 8px;
+    #user-info {
+      margin-top: 30px;
+      text-align: center;
+      font-size: 18px;
     }
   </style>
 </head>
 <body>
-
-  <div id="sidebar">
-    <div id="loginStatus">Authorizing Google...</div>
+  <div class="top-bar">
+    Google Drive App
   </div>
-  <iframe id="viewer" src=""></iframe>
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-  <script src="https://apis.google.com/js/api.js" onload="gapiLoaded()" async defer></script>
-  <script src="app.js"></script>
+  <div class="login-container">
+    <div id="g_id_signin"></div>
+  </div>
+  <div id="user-info"></div>
 
+  <script>
+
+  </script>
 </body>
 </html>
