--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Google Identity Services (GIS) -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
-  
+  <script src="app.js"></script>
   <style>
     body {
       margin: 0;
@@ -45,9 +45,5 @@
     <div id="g_id_signin"></div>
   </div>
   <div id="user-info"></div>
-
-  <script>
-
-  </script>
 </body>
 </html>
