--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <h1>Google Drive App</h1>
+  <h1>Google Drive App2</h1>
   <div id="login-div">
     <div id="g_id_signin"></div>
   </div>
