--- a/index.html
+++ b/index.html
@@ -2,28 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Google Drive Embedded Login</title>
+  <title>Google Drive</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    #login-div {
-      margin-top: 50px;
-    }
-    #content {
-      display: none;
-      margin-top: 30px;
-    }
-    button {
-      padding: 10px 15px;
-      font-size: 16px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <script src="app.js" async defer></script>
 </head>
 <body>
-  <h1>Google Drive App2</h1>
   <div id="login-div">
     <div id="g_id_signin"></div>
   </div>
@@ -32,91 +16,7 @@
     <button onclick="listDriveFiles()">List My Drive Files</button>
     <ul id="file-list"></ul>
   </div>
-
-  <!-- Google Identity Services (GIS) script -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="https://apis.google.com/js/api.js" async defer></script>
-
-  <script>
-    const CLIENT_ID = 'YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com'; // Replace this
-    const SCOPES = 'https://www.googleapis.com/auth/drive.metadata.readonly';
-
-    let tokenClient;
-    let accessToken = null;
-
-    /**
-     * On load: Initialize Sign-In button and token client.
-     */
-    window.onload = () => {
-      // Render the embedded Sign-In button
-      google.accounts.id.initialize({
-        client_id: CLIENT_ID,
-        callback: handleIdToken, // triggered after user selects account
-        auto_select: false,
-        ux_mode: 'popup'
-      });
-
-      google.accounts.id.renderButton(
-        document.getElementById('g_id_signin'),
-        { theme: 'outline', size: 'large' }
-      );
-
-      // Prepare OAuth token client (for Drive API access)
-      tokenClient = google.accounts.oauth2.initTokenClient({
-        client_id: CLIENT_ID,
-        scope: SCOPES,
-        callback: (tokenResponse) => {
-          if (tokenResponse.error) {
-            console.error(tokenResponse);
-            return;
-          }
-          accessToken = tokenResponse.access_token;
-          document.getElementById('login-div').style.display = 'none';
-          document.getElementById('content').style.display = 'block';
-        }
-      });
-    };
-
-    /**
-     * After user selects account, request access token.
-     * This does not reload or redirect.
-     */
-    function handleIdToken(response) {
-      // Optional: decode response.credential to inspect ID token.
-      tokenClient.requestAccessToken(); // OAuth2 token for Drive API
-    }
-
-    /**
-     * Loads Google Drive API and lists user's files.
-     */
-    function listDriveFiles() {
-      gapi.load('client', async () => {
-        await gapi.client.init({
-          discoveryDocs: ['https://www.googleapis.com/discovery/v1/apis/drive/v3/rest'],
-        });
-
-        gapi.client.setToken({ access_token: accessToken });
-
-        const response = await gapi.client.drive.files.list({
-          pageSize: 10,
-          fields: 'files(id, name)',
-        });
-
-        const files = response.result.files;
-        const list = document.getElementById('file-list');
-        list.innerHTML = '';
-
-        if (!files || files.length === 0) {
-          list.innerHTML = '<li>No files found.</li>';
-        } else {
-          files.forEach(file => {
-            const li = document.createElement('li');
-            li.textContent = `${file.name} (${file.id})`;
-            list.appendChild(li);
-          });
-        }
-      });
-    }
-  </script>
 </body>
 </html>
