--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
   <div id="content">
     <p>You are signed in.</p>
-    <button onclick="listDriveFiles()">List My Drive Files</button>
+    <button onclick="listDriveFolders()">List My Drive Files</button>
     <ul id="file-list"></ul>
   </div>
 </body>
