--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
   </div>
   <div id="content">
     <p>You are signed in.</p>
-    <button onclick="listDriveFolders()">List My Drive Folders</button>
-    <ul id="file-list"></ul>
+    <button onclick="loadMariaFolderTree()">Load 'Мария' Folder Tree</button>
+    <div id="folder-tree">
+      <h3>📂 Folder Tree Starting from: "Мария"</h3>
+      <ul id="tree-root"></ul>
+    </div>
   </div>
 </body>
 </html>
